--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,8 +1,10 @@
 name: Lint-project
 run-name: Lint-project
 on:
-    push:
-        branches: [main]
+    workflow_run:
+        workflows: ['Build-project']
+        types:
+            - completed
 jobs:
     Lint-project:
         if: github.event.workflow_run.conclusion == 'success'
